# no_std

./: Définition  Prérequis_pour_le_test  RAPPORT.md  README.md  test_et_warning
Cargo_test/: essai_1
allocateur_de_memoire/: Cargo.toml
allocateur_de_memoire/.config/: config.toml
allocateur_de_memoire/src/: lib.rs  main.rs
allocateur_de_memoire/tests/: allocator_tests.rs  basic_tests.rs
